Migrate methods in Config to ConfigManager